Agregando link al repositorio en github.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -7,3 +7,15 @@
 
 {{code-snippet name="demo.hbs"}}
 {{code-snippet name="demo.js"}}
+
+
+
+
+<!-- Octocat icon by Icons8 -->
+<a href="https://github.com/EnjambreBit/enjambre-componentes" target="_blank"> <img src="https://png.icons8.com/octocat/color/24" title="Octocat" width="24" height="24"> Ver en github
+</a>
+
+
+
+
+<a href="https://icons8.com">Icon pack by Icons8</a>
